--- a/DockerFile
+++ b/DockerFile
@@ -1,6 +1,6 @@
 FROM node:12-alpine3.14
 WORKDIR /app
-COPY * /app
+COPY . /app
 RUN npm ci --only=production && npm cache clean --force
 COPY . /app
 CMD node index.js
