--- a/.github/workflows/biolab.yaml
+++ b/.github/workflows/biolab.yaml
@@ -2,16 +2,16 @@ name: biolab
 "on":
     push:
         branches:
-            - aks-devhub-rmyew
+            - main
     workflow_dispatch: {}
 env:
     ACR_RESOURCE_GROUP: NeoCloud
-    AZURE_CONTAINER_REGISTRY: acrworkflow1681458203551
+    AZURE_CONTAINER_REGISTRY: acrworkflow1681459477340
     CLUSTER_NAME: NeoCloudKub
     CLUSTER_RESOURCE_GROUP: NeoCloud
-    CONTAINER_NAME: image-workflow-1681458203551
+    CONTAINER_NAME: image-workflow-1681459477340
     DEPLOYMENT_MANIFEST_PATH: |
-        ./manifest.yml
+        ./DockerFile
 jobs:
     buildImage:
         permissions:
@@ -61,4 +61,4 @@ jobs:
                 action: deploy
                 images: ${{ env.AZURE_CONTAINER_REGISTRY }}.azurecr.io/${{ env.CONTAINER_NAME }}:${{ github.sha }}
                 manifests: ${{ env.DEPLOYMENT_MANIFEST_PATH }}
-                namespace: namespace-workflow-1681458203551
+                namespace: namespace-workflow-1681459477340
